// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageInput renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#F9F9F9",
        "borderTopColor": "#EEEEEE",
        "borderTopWidth": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 8,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      maxHeight={100}
      multiline={true}
      onChangeText={[Function]}
      placeholder="Type a message"
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#EEEEEE",
          "borderRadius": 17.5,
          "borderWidth": 1.5,
          "flex": 1,
          "fontSize": 16,
          "marginRight": 8,
          "minHeight": 35,
          "paddingBottom": 8,
          "paddingHorizontal": 15,
          "paddingTop": 8,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#2277D8",
          "borderRadius": 17.5,
          "opacity": 1,
          "padding": 10,
          "width": 35,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/img/send_message.png",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`MessageInput sets a paddingBottom to messageInput when the phone is iphone X 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#F9F9F9",
      "borderTopColor": "#EEEEEE",
      "borderTopWidth": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 8,
        },
        Object {
          "paddingBottom": 30,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      maxHeight={100}
      multiline={true}
      onChangeText={[Function]}
      placeholder="Type a message"
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#EEEEEE",
          "borderRadius": 17.5,
          "borderWidth": 1.5,
          "flex": 1,
          "fontSize": 16,
          "marginRight": 8,
          "minHeight": 35,
          "paddingBottom": 8,
          "paddingHorizontal": 15,
          "paddingTop": 8,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#2277D8",
          "borderRadius": 17.5,
          "opacity": 1,
          "padding": 10,
          "width": 35,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/img/send_message.png",
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
